--- a/AesProject/AesProject.csproj
+++ b/AesProject/AesProject.csproj
@@ -46,6 +46,7 @@
     <Compile Include="FileOperation.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Tables.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
